--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Chanel a melhor Marca</h1>
+    <h1>Chanel a melhor... Marca</h1>
     <img id="img1" src="logo-chanel-4096.png">
     <h2> Veja o produto mais vendido</h2>
     <img id="img2" src="perfume_coco_mademoiselle_eau_de_parfum_chanel_feminino_1479_2_102bc76c0bfa36c85beaa1833b9333e8.webp">  
